--- a/Inventori-for-home-WEB-ver/Views/Home/Empaques.cshtml
+++ b/Inventori-for-home-WEB-ver/Views/Home/Empaques.cshtml
@@ -27,11 +27,45 @@
     tr:hover {
         background-color: #f1f1f1;
     }
+
+    /* Agregar estilo al boton */
+    .button {
+        background-color: #28a745; /* Color de fondo verde */
+        border: none; /* Sin bordes */
+        color: white; /* Texto en blanco */
+        padding: 12px 24px; /* Espaciado interior del botón */
+        text-align: center; /* Centrar el texto */
+        text-decoration: none; /* Sin subrayado */
+        display: inline-block; /* Hace que el botón esté en línea con otros elementos */
+        font-size: 16px; /* Tamaño de fuente */
+        font-weight: bold; /* Negrita */
+        border-radius: 8px; /* Bordes redondeados */
+        transition: background-color 0.3s ease, transform 0.3s ease; /* Transiciones suaves */
+        cursor: pointer; /* Cambia el cursor a una mano cuando pasa por encima */
+    }
+
+        .button:hover {
+            background-color: #218838; /* Color de fondo más oscuro al pasar el mouse */
+            transform: scale(1.05); /* Aumenta ligeramente el tamaño al pasar el mouse */
+        }
+
+        .button:active {
+            background-color: #1e7e34; /* Color de fondo más oscuro cuando se hace clic */
+            transform: scale(0.98); /* Hace el botón ligeramente más pequeño al hacer clic */
+        }
+
+        .button:disabled {
+            background-color: #c3e6cb; /* Color de fondo grisáceo cuando está deshabilitado */
+            cursor: not-allowed; /* Cambia el cursor a uno que indica que no se puede hacer clic */
+        }
 </style>
 <body>
     <h1>Tipos de empaques</h1>
-    <button onclick="llenarTabla()">LLENAR TABLA</button>
-    <button onclick="showAlerta()">MOSTRAR ALERTA</button>
+    <button onclick="abrirFormAñadirE()" class="button">Añadir Elemento</button>
+    <form action="@Url.Action("FormularioEmp", "Home")" method="post">
+    </form>
+    <br/>
+    <br/>
     <table id="gridEmpaques">
         <thead>
             <tr>
@@ -40,10 +74,6 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>Caja de 24 pza</td>
-            </tr>
         </tbody>
     </table>
 </body>
