--- a/Inventori-for-home-WEB-ver/Views/Home/Empaques.cshtml
+++ b/Inventori-for-home-WEB-ver/Views/Home/Empaques.cshtml
@@ -61,7 +61,9 @@
 </style>
 <body>
     <h1>Tipos de empaques</h1>
-    <button onclick="abrirFormAñadirE()" class="button">Añadir Elemento</button>
+    <button onclick="abrirFormAñadirE()" class="button">Añadir empaque</button>
+    @* <button onclick="abrirFormActualizarE()" class="button">Actualizar empaque</button>
+    <button onclick="abrirFormBorrarE()" class="button">Borrar empaque</button> *@
     <form action="@Url.Action("FormularioEmp", "Home")" method="post">
     </form>
     <br/>
@@ -80,7 +82,7 @@
 
 @* CODIGO JS *@
 <script src="@Url.Content("~/js/EmpaquesFuncJS.js")"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
 
 
