--- a/Inventori-for-home-WEB-ver/Views/Home/Reglasdeprioridad.cshtml
+++ b/Inventori-for-home-WEB-ver/Views/Home/Reglasdeprioridad.cshtml
@@ -88,3 +88,4 @@
 
 @* CODIGO JS *@
 <script src="@Url.Content("~/js/PrioridadesFunc.js")"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
