+Finalizacion de proyecto

--- a/Inventori-for-home-WEB-ver/Views/Home/Empaques.cshtml
+++ b/Inventori-for-home-WEB-ver/Views/Home/Empaques.cshtml
@@ -88,12 +88,42 @@
             background-color: #e69138; /* Color de fondo grisáceo cuando está deshabilitado */
             cursor: not-allowed; /* Cambia el cursor a uno que indica que no se puede hacer clic */
         }
+
+    .button3 {
+        background-color: #f43636; /* Color de fondo verde */
+        border: none; /* Sin bordes */
+        color: white; /* Texto en blanco */
+        padding: 12px 24px; /* Espaciado interior del botón */
+        text-align: center; /* Centrar el texto */
+        text-decoration: none; /* Sin subrayado */
+        display: inline-block; /* Hace que el botón esté en línea con otros elementos */
+        font-size: 16px; /* Tamaño de fuente */
+        font-weight: bold; /* Negrita */
+        border-radius: 8px; /* Bordes redondeados */
+        transition: background-color 0.3s ease, transform 0.3s ease; /* Transiciones suaves */
+        cursor: pointer; /* Cambia el cursor a una mano cuando pasa por encima */
+    }
+
+        .button3:hover {
+            background-color: #cf1d1d; /* Color de fondo más oscuro al pasar el mouse */
+            transform: scale(1.05); /* Aumenta ligeramente el tamaño al pasar el mouse */
+        }
+
+        .button3:active {
+            background-color: #b51616; /* Color de fondo más oscuro cuando se hace clic */
+            transform: scale(0.98); /* Hace el botón ligeramente más pequeño al hacer clic */
+        }
+
+        .button3:disabled {
+            background-color: #d56a6a; /* Color de fondo grisáceo cuando está deshabilitado */
+            cursor: not-allowed; /* Cambia el cursor a uno que indica que no se puede hacer clic */
+        }
 </style>
 <body>
     <h1>Tipos de empaques</h1>
     <button onclick="abrirFormAñadirE()" class="button">Añadir empaque</button>
     <button onclick="abrirFormActualizarE()" class="button">Actualizar empaque</button>
-    @* <button onclick="abrirFormBorrarE()" class="button">Borrar empaque</button> *@
+    <button onclick="abrirFormBorrarE()" class="button">Borrar empaque</button>
     <form action="@Url.Action("FormularioEmp", "Home")" method="post">
     </form>
     <br/>
